syntax = "proto3";

package api;

import "google/api/annotations.proto";
import "workflow_template.proto";

service WorkspaceTemplateService {
    // Creates a WorkspaceTemplate
    rpc CreateWorkspaceTemplate (CreateWorkspaceTemplateRequest) returns (WorkspaceTemplate) {
        option (google.api.http) = {
            post: "/apis/v1beta1/{namespace}/workspace_templates"
            body: "workspaceTemplate"
        };
    }

    // Get the generated WorkflowTemplate for a WorkspaceTemplate
    rpc GenerateWorkspaceTemplateWorkflowTemplate (GenerateWorkspaceTemplateWorkflowTemplateRequest) returns (WorkflowTemplate) {
        option (google.api.http) = {
            post: "/apis/v1beta1/{namespace}/workspace_templates/{uid}/workflow_template"
            body: "workspaceTemplateManifest"
        };
    }
}

message CreateWorkspaceTemplateRequest {
    string namespace = 1;
    WorkspaceTemplate workspaceTemplate = 2;
}

message WorkspaceTemplate {
    string uid = 1;
    string name = 2;
    int64 version = 3;
    string manifest = 4;
    bool isLatest = 5;
    string createdAt = 6;
    WorkflowTemplate workflowTemplate = 7;
}

message GenerateWorkspaceTemplateWorkflowTemplateRequest {
    string namespace = 1;
    string uid = 2;
    string workspaceTemplateManifest = 3;
}

